syntax = "proto3";

package kademlia;

service KademliaService {
    rpc FindNode (Target) returns (Nodes) {}
}

message Target {
    string target_id = 1;
    NodeInfo sender = 2;
}
message Nodes {
    repeated NodeInfo nodes = 1;
}

message NodeInfo {
    string id = 1;
    string ip = 2;
    string port = 3;
}